<resources>
    <string name="app_name">Speed</string>
    <string name="scan">Scanning code</string>
    <string name="Scanresult">Scanning Result</string>
    <string name="scanagine">Scan Again</string>
    <string name="finish">finish</string>
    <string name="noresult">no Result</string>
    <string name="scanning">Ready</string>
    <string name="call">Make Call</string>
    <string name="whaite">waite</string>
    <string name="results_appear_here">results appears here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_phone_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="strAccepterConditions">En appuyant sur Accepter et continuer
        vous acceptez les conditions d\'utilisation et la politique de confidentialité de Speed</string>

    <string name="strCondEtPol"></string>
    <string name="tab_text_00">PICT</string>
    <string name="tab_text_0"></string>
    <string name="tab_text_1">Disc</string>
    <string name="tab_text_2">Historique </string>
    <string name="tab_text_3">Appels</string>
    <string name="strSendSms"> Speed va vous envoyer un sms pour verifier votre numéro de téléphone.
        Sélectionnez votre pays et entrez votre numéro de téléphone</string>
    <string name="strNouveauGroupe">Nouveau Groupe</string>
    <string name="strNouvelleDiscussion">Nouvelle Discussion</string>
    <string name="strMaxWeb">Speed Web</string>
    <string name="strParametre">Parametres</string>
    <string name="strRecherche">Rechercher</string>
    <string name="strMonStatut">Mon Statut</string>
    <string name="strAddStatut">Ajouter un statut</string>
    <string name="strNomUtilisateur">Nom d\'utilisateur</string>
    <string name="strManque">manqué</string>
    <string name="strRecu">recu</string>
    <string name="strWelcome">Bienvenue sur Speed</string>
    <string name="strAccepter">Accepter Et Continuer</string>
    <string name="strEnterNumber">Veuillez entrer votre numéro de télephone</string>
    <string name="strSendMessage">Speed vous enverra un SMS pour vérifier votre numéro de téléphone.</string>
    <string name="strFraisSms">Des frais de SMS peuvent s\'appliquer.</string>
    <string name="strEnterNum">Veuillez saisir votre numéro de téléphone</string>
    <string name="strNumTel">Numéro de téléphone.</string>
    <string name="strSuivant">suivant</string>
    <string name="strEnterCode">Entrez le Code recu par SMS pour continuer</string>
    <string name="strEnterName">entrer votre nom ici</string>
    <string name="strProfilInfo">Informations de Profil</string>
    <string name="strEnterNameAndPhoto"> Veuillez fournir votre nom d\’utilisateur </string>
    <string name="strInitialisation">Initialisation</string>
    <string name="strPatienter">"Veuillez patienter... celà ne prendra qu'un instant "</string>
    <string name="strTraduction">Traduction Automatique</string>
    <string name="strTraductionMaxads">Speed traduit automatiquement les messages que vous recevez en langues étrangères. Choisissez juste la langue avec laquelle vous aimeriez recevoir vos messages.</string>
    <string name="strEtapeun">Etape  1/4</string>
    <string name="strEtapedeux">Etape  2/4</string>
    <string name="strEtapetrois">Etape  3/4</string>
    <string name="strEtapequatre">Etape  4/4</string>
    <string name="strContinuer">Continuer</string>
    <string name="strIgnorer">Ignorer</string>
    <string name="strLancezVous">Lancez Vous</string>
    <string name="strConfigurationTermine">La configuration de Speed est terminée. Vous pouvez commencer votre expérience.</string>
    <string name="strTermine">Terminé</string>
    <string name="strCode">Code de verification</string>
    <string name="statut">Statut</string>
    <string name="publicite">Publicite</string>
    <string name="messages">Messages</string>
    <string name="groupes">Groupes</string>
    <string name="Setting">Setting</string>
    <string name="profiluser">Profil</string>
    <string name="enteryouname">Enter your Name</string>
    <string name="your_name">Enter  your Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="profile_photo">Profil photo</string>
    <string name="gallery">gallery</string>
    <string name="namecanbeempty">name can t be empty</string>
    <string name="contact">Contacts</string>
    <string name="creer_groupe">Create Group</string>
    <string name="click_to_add_group">Click to add New Groupe</string>
    <string name="add_newUser">Add new User</string>
    <string name="last_seen_today_at_9_00_am">last seen today at 9:00 am</string>
    <string name="type_a_message">Type a message</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="lacation">Location</string>
    <string name="send_image">Send Image</string>
    <string name="try_againe">Try again</string>
    <string name="_10_25_pm">10:25 PM</string>
    <string name="numecanbeempty">Number Can t be empty</string>
    <string name="waiting">please wait</string>
    <string name="pleaseentervalid">Please enter valid Code</string>
    <string name="higth_connection">Make live easy</string>
    <string name="isempty">code de verification  vide</string>
    <string name="envoie">Envoie</string>
    <string name="reception">Reception</string>
    <string name="codenonreconu">code non reconue</string>
    <string name="forflash">For Flash use Volume up Key</string>
    <string name="payto">Payer à</string>
    <string name="create_ussd_code">Créé ton code USSD</string>
    <string name="defaulnumber">672778594</string>
    <string name="submit">valider</string>
    <string name="operateur">Operateur</string>
    <string name="operateu">Operator</string>
    <string name="numero_telephone">Numero telephone</string>
    <string name="numero">Numero </string>
    <string name="enter_text">Enter TEXT</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="generate">Generate</string>
    <string name="codeussd">code ussd</string>
    <string name="codeuss"> ussd</string>
    <string name="click_to_generate_pdf_document">Click to generate Pdf Document</string>
    <string name="codegenere">code bar</string>
    <string name="erreur_connextion">Erreur de connexion</string>
    <string name="canbeempty">Can\' t be empty</string>
    <string name="nombreussmax">Nombre maximum de creation ateint</string>
    <string name="enter_number">un Numero</string>
    <string name="enter_codevendeur">code vendeur </string>
    <string name="msg_subscribed">subscribed</string>
    <string name="msg_subscribe_failed">subscribe failed</string>
    <string name="by_wintime">by Wintime</string>
    <string name="pby_wintime">Powered by WinTime</string>
    <string name="entre_le_montant">Entrez le montant svp</string>
    <string name="ok">ok</string>
    <string name="erreur_bd">Erreur De base de donnée</string>
    <string name="strBienvenu">Bienvenue sur</string>
    <string name="speed">Speed</string>
    <string name="strlse">Lisez notre politique de Confidentialité et appuyer</string>
    <string name="strlses">-J accepte -pour Continuer</string>
    <string name="fonctionnalite">Fonctionnalités</string>
    <string name="qrcode">QR CODE</string>
    <string name="unenouvel">Une nouvelle façon de payer</string>
    <string name="transferdargent">TRANSFERT D\' ARGENT</string>
    <string name="solution">Solution au manque</string>
    <string name="despiece">de pièces d\’argent</string>
    <string name="plut">Plus de problème de remboursement, il te suffit </string>
    <string name="scaner">simplement de scanner le QR code de votre </string>
    <string name="payerp">bénéficiaire pour payer par un simple click. </string>
    <string name="depayer">de Payer</string>
    <string name="payerdermais">Payez désormais à partir du QR code. En faisant</string>
    <string name="simplescanne">un simple scan, règlez tous tes achats et services.</string>
    <string name="suivant">suivant</string>
    <string name="publicites">PUBLICITE</string>
    <string name="votre">Votre communication</string>
    <string name="estassu">est assurée</string>
    <string name="faitec">Faites connaître vos produits ou services d’un </string>
    <string name="serv">click </string>
    <string name="creervousmeme">Créer vous-même</string>
    <string name="commencer">Démarrer </string>

    <string name="person">PERSONNALISER</string>
    <string name="votreque">votre QR Code</string>
    <string name="vouspoure">Vous pouvez créer vous-même votre QR code en</string>
    <string name="enbot">toute sécurité sans contrainte et le partager</string>
    <string name="avosuti">à vos utilisateur</string>
    <string name="bienvenue">Bienvenue sur</string>
    <string name="mtnmoney">MTN MONEY</string>
    <string name="orangemoney">ORANGE MONEY</string>
    <string name="textvous">vous pouvez aussi obtenir votre code  via un autre téléphone en composant :\n #150#  sur le numero 657 385 146  \n ou \n *126#  sur le numero 672 77 85 94</string>
    <string name="achatcode">Votre Code</string>
    <string name="deduction">A une déduction de 100 FCFA/mois</string>
    <string name="deductionf">A une déduction de 150 FCFA/mois</string>
    <string name="saisicode">Saisir Code</string>
    <string name="enter_code">code de validation</string>
    <string name="obtenircode">OBTENIR VOTRE CODE</string>
    <string name="numero_incorrect">Numero Incorrect</string>
    <string name="delete_ussd_code">Delete Number</string>
    <string name="compagnie_name">Nom de la compagnie</string>
    <string name="strchangelanguage">Change Language</string>
    <string name="filenoexiste">file not existe</string>
    <string name="typecompte">Type de compte</string>
    <string name="entreprise">Entreprise</string>
    <string name="personnel">Personnel</string>
    <string name="numerocourt">Numero Court</string>
    <string name="radical">Radical</string>


    <string-array name="langues">
        <item>Francais</item>
        <item>Anglais</item>
    </string-array>
</resources>
