<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentFonctionnaliteune"
    android:orientation="vertical"

    android:background="#650808">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp">
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
       android:src="@drawable/ic_start" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fonctionnalite"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"

        android:src="@drawable/qrcodee" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qrcode"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unenouvel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payerdermais"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_marginStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simplescanne"
        android:textColor="@color/white"

        android:gravity="center_horizontal"
        android:layout_marginStart="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
       >
        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/speed"
            android:textColor="@color/white"
            android:textSize="20sp"
           android:layout_marginStart="5dp"
            android:layout_weight="1"


           />
        <LinearLayout
            android:id="@+id/suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal"
                android:text="@string/suivant"
                android:textColor="@color/white"
                android:textSize="20sp"

                />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_suivant" />
    </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/poin"
            android:layout_marginStart="5dp"
           />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp"
            >


        </LinearLayout>

    </LinearLayout>
</LinearLayout>