<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DefinirUtilisateurFragment"
    android:background="#650808">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_etape04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/sfpro_regular"
            android:gravity="center"
            android:text="@string/strEtapetrois"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/strProfilInfo"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sfpro_regular"
            android:text="@string/strEnterNameAndPhoto"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circle_image_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bordre_ronder"
            android:src="@drawable/speed" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/sfpro_regular"
            android:hint="@string/strEnterName"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_set_profil_next"
        android:layout_width="124dp"
        android:layout_height="44dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:background="@drawable/bouton_rect"
        android:fontFamily="@font/sfpro_regular"
        android:text="@string/strContinuer"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="12sp" />


</RelativeLayout>
